samples/_failures_safe/1761406762_3d8b30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_637d9758.c: In function ‘main’:
./samples/SAFE/__tmp_637d9758.c:170:5: error: expected expression at end of input
  170 |     for (int i = 0; i < token_count; i++)
      |     ^~~
./samples/SAFE/__tmp_637d9758.c:170:5: error: expected declaration or statement at end of input
